# barcodejun

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  workflow.yaml
barcodejun/: __init__.py  barcode.py  data.py  file_type.py  type.py  vers.py
src/barcodejun/: barcode.py  barcode_data.py  barcode_type.py  install.py
tests/: test_barcode.py  test_barcode_data.py  test_barcode_generate.py
